@@ -59,7 +59,7 @@ memory statistics and data for other users requires root privileges
 .
 .\" Document /////////////////////////////////////////////////////////////
 .\" ----------------------------------------------------------------------
-.TH TOP 1 "July 2023" "procps-ng" "User Commands"
+.TH TOP 1 "August 2023" "procps-ng" "User Commands"
 .\" ----------------------------------------------------------------------
 .nh
 
@@ -557,7 +557,7 @@ and `4' \*(CTs.
 .\" ----------------------------------------------------------------------
 This portion consists of two lines which may express values in kibibytes (KiB)
 through exbibytes (EiB) depending on the scaling factor enforced
-with the `E' \*(CI. The /proc/meminfo source fields are shown in parentheses.
+with the `E' \*(CI. The /proc/meminfo source fields are shown in parenthesis.
 
 Line 1 reflects \*(MP, classified as:
 .nf
@@ -1747,7 +1747,7 @@ Then the third `!' press, combining four additional \*(Pus, shows
 as `0-4, 5-9, ...', etc.
 
 Such progression continues until individual \*(Pus are again displayed
-and impacts both the `1' and `4' toggles (one or muliple columns).
+and impacts both the `1' and `4' toggles (one or multiple columns).
 Use the `=' command to exit \fBCombine Cpus\fR mode.
 
 .PP
